# study-progs

./: .gitignore  LICENSE  README.md
IIP_labs/lab_1/: Controller.java  GUI.fxml  Main.java  Model.java
IIP_labs/lab_1/BinaryTree/: BinaryTree.java  Node.java
IIP_labs/lab_1/Dictionary/: DictNode.java  Dictionary.java  DictionaryNode.java  dictionary_list.json
IIP_labs/lab_1/Tests/: UnitTests.java
IIP_labs/lab_3/: Main.java
IIP_labs/lab_3/Debugger/: Debugger.java
IIP_labs/lab_3/LinkedList/: DoubleLinkedList.java  DoubleListNode.java  ILinkedList.java  INode.java
IIP_labs/lab_4/: Student.cpp  Student.h  main.cpp
IIP_labs/lab_4/UnitTests/: CMakeLists.txt  Tests.cpp
IIP_labs/lab_6/: CMakeLists.txt  directory.cpp  directory.h  file.cpp  file.h
OS_labs/: os_lab_1.bat  os_lab_2.sh  os_lab_3.c  os_lab_4.c
VM_labs/: 2_golden_section.py  2_secant_method.py
VM_labs/lab2/: numerical_differentiation.py  simpson_rule.py
VM_labs/lab_3/: NewtonPolynomial.py  main_app.py
fall semester 2 course/computational_math_labs/lab_1_search_extremum/: 2_golden_section.py
fall semester 2 course/operating_system_labs/: os_lab_1.bat  os_lab_3.c  os_lab_4.c
fall semester 2 course/programming_labs/lab_1/: Controller.java  Model.java
fall semester 4 course/functional_programming/: drugs.txt  lab_1.pl  lab_2.pl  lab_3.pl  lab_4.pl
spring semester 2 course/operatin_system_labs/: lab_1.asm  lab_1s.asm  lab_2.asm  linker.bat
spring semester 2 course/taify_labs/: lab_2.py
spring semester 3 course/functional programming/: lab_1.cl  lab_2.cl  lab_3.cl  lab_4.cl  lab_5.cl
(+111 files in other folders)
